Tests/Error/Types/.build/catchfileerror.pr
{
  "name": "CatchFileError",
  "description": "Sets %fileErrorCaught% to true (null comparison implied by step text).",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %fileErrorCaught% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%fileErrorCaught%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": [
            {
              "name": "asdefault",
              "value": false,
              "type": "bool"
            }
          ],
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Error/Types/CatchFileError.goal",
  "prPath": "/Error/Types/.build/catchfileerror.pr",
  "hash": "41c7c19edbdb6bc6e6f6e20355d6163717a2a518dd94db2ab2c1c062b026d233",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}